MiniYaml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: wiredcraft
   labels:
     name: wiredcraft
