MiniYaml/ingress-controller.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: wiredcraft
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
    spec:
      # wait up to five minutes for the drain of connections
      terminationGracePeriodSeconds: 600
      serviceAccountName: nginx-ingress-serviceaccount
      hostNetwork: true
      containers:
        - name: nginx-ingress-controller
          image: bitnami/nginx-ingress-controller:latest
          #args:
          #  - /nginx-ingress-controller
          # #- --default-backend-service=$(POD_NAMESPACE)/default-http-backend
          #  - --configmap=$(POD_NAMESPACE)/nginx-configuration
          #  - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
          #  - --udp-services-configmap=$(POD_NAMESPACE)/udp-services
          #  - --publish-service=$(POD_NAMESPACE)/ingress-nginx
          #  - --annotations-prefix=nginx.ingress.kubernetes.io
          #securityContext:
          #  allowPrivilegeEscalation: true
          #  capabilities:
          #    drop:
          #      - ALL
          #    add:
          #      - NET_BIND_SERVICE
          #  # www-data -> 33
          #  runAsUser: 33
          #env:
          #  - name: POD_NAME
          #    valueFrom:
          #      fieldRef:
          #        fieldPath: metadata.name
          #  - name: POD_NAMESPACE
          #    valueFrom:
          #      fieldRef:
          #        fieldPath: metadata.namespace
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          #livenessProbe:
          #  failureThreshold: 3
          #  httpGet:
          #    path: /healthz
          #    port: 10254
          #    scheme: HTTP
          #  initialDelaySeconds: 10
          #  periodSeconds: 10
          #  successThreshold: 1
          #  timeoutSeconds: 10
          #readinessProbe:
          #  failureThreshold: 3
          #  httpGet:
          #    path: /healthz
          #    port: 10254
          #    scheme: HTTP
          #  periodSeconds: 10
          #  successThreshold: 1
          #  timeoutSeconds: 10
