MiniYaml/nginx-dp.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  labels:
    app: nginx-sv
spec:
  type: NodePort
  ports:
  - name: nginx
    #protocol: TCP
    port: 8081
    nodePort: 8081
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
