MiniYaml/craft-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiredcraft-ingress
  #namespace: wiredcraft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: craft.systemtime.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-system-time
                port:
                  number: 8000
