MiniYaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-nginx
    namespace: wiredcraft
    annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
    rules:
      -  http:
          paths:
            - path: /
              backend:
                serviceName: mini-system-time
                servicePort: 8080
